--- a/case_study/src/main/resources/templates/contract/list.html
+++ b/case_study/src/main/resources/templates/contract/list.html
@@ -80,18 +80,79 @@
                  aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <form th:action="@{/contract/create}">
+                        <form th:action="@{/contract/create}" th:object="${contractDto}" th:method="post">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="exampleModalLabel">Create Contract</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                ...
+                                <div class="mt-3 form-group">
+                                    <label>Start Date: </label>
+                                    <input class="form-control" th:type="date" th:field="*{startDate}">
+                                </div>
+                            </div>
+                            <div class="modal-body">
+                                <div class="mt-3 form-group">
+                                    <label>End Date: </label>
+                                    <input class="form-control" th:type="date" th:field="*{endDate}">
+                                </div>
+                            </div>
+                            <div class="modal-body">
+                                <div class="mt-3 form-group">
+                                    <label>Deposit: </label>
+                                    <input class="form-control" th:type="numbers" th:field="*{deposit}">
+                                </div>
+                            </div>
+                            <div class="modal-body">
+                                <div class="mb-3">
+                                    <label>Customer: </label><br>
+                                    <select th:field="*{customer}">
+                                        <option value="" selected>Choose Customer</option>
+                                        <option th:each="ct : ${customer}" th:value="${ct.id}"
+                                                th:text="${ct.name}"></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="modal-body">
+                                <div class="mb-3">
+                                    <label>Facility: </label><br>
+                                    <select th:field="*{facility}">
+                                        <option value="" selected>Choose Facility</option>
+                                        <option th:each="ft : ${facility}" th:value="${ft.id}"
+                                                th:text="${ft.name}"></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="modal-body">
+                                <div>
+                                    <label class="form-label">Attach Facility: </label>
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                            data-bs-target="#createAttachFacility">
+                                        +
+                                    </button>
+                                    <div class="modal fade" id="createAttachFacility" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel">Create AttachFacility</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    ...
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Save</button>
                             </div>
                         </form>
                     </div>
